# spellbook-api

./: .env.d  Cargo.toml  README.md  diesel.toml  docker-compose.yml
migrations/2024-10-25-100629_create_spells/: down.sql  up.sql
migrations/2024-11-08-081947_create_users/: down.sql  up.sql
migrations/2024-11-10-123117_add_published_field_to_spells/: down.sql  up.sql
migrations/2025-02-21-130950_add_nanoid_to_spells_table/: down.sql  up.sql
openapi/: openapi.yml
src/: enums.rs  errors.rs  lib.rs  main.rs  middleware.rs  models.rs  requests.rs  resources.rs  schema.rs
src/handlers/: mod.rs  spells.rs  users.rs
src/models/: spells.rs  users.rs
src/repositories/: spells.rs  users.rs
src/requests/: spells.rs  users.rs
src/resources/: spells.rs
src/validators/: spells.rs
