[package]
name = "spellbook-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
diesel = { version = "2.2.4", features = ["postgres"] }
dotenvy = "0.15.7"
regex = "1.11.1"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
tower = "0.5.1"
uuid = { version = "1.11.0", features = ["v4"] }
